backend/functions/firebase-debug.log
[debug] [2023-04-06T20:00:59.379Z] ----------------------------------------------------------------------
[debug] [2023-04-06T20:00:59.380Z] Command:       C:\Program Files\nodejs\node.exe C:\Users\Krompa\AppData\Roaming\npm\node_modules\firebase-tools\lib\bin\firebase.js emulators:start --only functions
[debug] [2023-04-06T20:00:59.381Z] CLI Version:   11.25.3
[debug] [2023-04-06T20:00:59.381Z] Platform:      win32
[debug] [2023-04-06T20:00:59.381Z] Node Version:  v18.13.0
[debug] [2023-04-06T20:00:59.382Z] Time:          Thu Apr 06 2023 22:00:59 GMT+0200 (Средњеевропско летње време)
[debug] [2023-04-06T20:00:59.382Z] ----------------------------------------------------------------------
[debug] 
[debug] [2023-04-06T20:00:59.489Z] > command requires scopes: ["email","openid","https://www.googleapis.com/auth/cloudplatformprojects.readonly","https://www.googleapis.com/auth/firebase","https://www.googleapis.com/auth/cloud-platform"]
[debug] [2023-04-06T20:00:59.489Z] > authorizing via signed-in user (branislavkrompic99@gmail.com)
[info] i  emulators: Starting emulators: functions {"metadata":{"emulator":{"name":"hub"},"message":"Starting emulators: functions"}}
[debug] [2023-04-06T20:00:59.498Z] [logging] Logging Emulator only supports listening on one address (127.0.0.1). Not listening on ::1
[debug] [2023-04-06T20:00:59.498Z] assigned listening specs for emulators {"user":{"hub":[{"address":"127.0.0.1","family":"IPv4","port":4400},{"address":"::1","family":"IPv6","port":4400}],"ui":[{"address":"127.0.0.1","family":"IPv4","port":4000},{"address":"::1","family":"IPv6","port":4000}],"logging":[{"address":"127.0.0.1","family":"IPv4","port":4500}]},"metadata":{"message":"assigned listening specs for emulators"}}
[debug] [2023-04-06T20:00:59.507Z] [hub] writing locator at C:\Users\Krompa\AppData\Local\Temp\hub-foodmine-backend.json
[debug] [2023-04-06T20:00:59.523Z] [functions] Functions Emulator only supports listening on one address (127.0.0.1). Not listening on ::1
[debug] [2023-04-06T20:00:59.523Z] [eventarc] Eventarc Emulator only supports listening on one address (127.0.0.1). Not listening on ::1
[debug] [2023-04-06T20:00:59.524Z] late-assigned ports for functions and eventarc emulators {"user":{"hub":[{"address":"127.0.0.1","family":"IPv4","port":4400},{"address":"::1","family":"IPv6","port":4400}],"ui":[{"address":"127.0.0.1","family":"IPv4","port":4000},{"address":"::1","family":"IPv6","port":4000}],"logging":[{"address":"127.0.0.1","family":"IPv4","port":4500}],"functions":[{"address":"127.0.0.1","family":"IPv4","port":5001}],"eventarc":[{"address":"127.0.0.1","family":"IPv4","port":9299}]},"metadata":{"message":"late-assigned ports for functions and eventarc emulators"}}
[warn] !  functions: The following emulators are not running, calls to these services from the Functions emulator will affect production: auth, firestore, database, hosting, pubsub, storage {"metadata":{"emulator":{"name":"functions"},"message":"The following emulators are not running, calls to these services from the Functions emulator will affect production: \u001b[1mauth, firestore, database, hosting, pubsub, storage\u001b[22m"}}
[debug] [2023-04-06T20:00:59.531Z] defaultcredentials: writing to file C:\Users\Krompa\AppData\Roaming\firebase\branislavkrompic99_gmail_com_application_default_credentials.json
[debug] [2023-04-06T20:00:59.545Z] Setting GAC to C:\Users\Krompa\AppData\Roaming\firebase\branislavkrompic99_gmail_com_application_default_credentials.json {"metadata":{"emulator":{"name":"functions"},"message":"Setting GAC to C:\\Users\\Krompa\\AppData\\Roaming\\firebase\\branislavkrompic99_gmail_com_application_default_credentials.json"}}
[debug] [2023-04-06T20:00:59.547Z] >>> [apiv2][query] GET https://firebase.googleapis.com/v1beta1/projects/foodmine-backend/adminSdkConfig [none]
[debug] [2023-04-06T20:00:59.878Z] <<< [apiv2][status] GET https://firebase.googleapis.com/v1beta1/projects/foodmine-backend/adminSdkConfig 200
[debug] [2023-04-06T20:00:59.878Z] <<< [apiv2][body] GET https://firebase.googleapis.com/v1beta1/projects/foodmine-backend/adminSdkConfig {"projectId":"foodmine-backend","storageBucket":"foodmine-backend.appspot.com"}
[debug] [2023-04-06T20:00:59.902Z] Ignoring unsupported arg: auto_download {"metadata":{"emulator":{"name":"ui"},"message":"Ignoring unsupported arg: auto_download"}}
[debug] [2023-04-06T20:00:59.902Z] Ignoring unsupported arg: port {"metadata":{"emulator":{"name":"ui"},"message":"Ignoring unsupported arg: port"}}
[debug] [2023-04-06T20:00:59.902Z] Starting Emulator UI with command {"binary":"node","args":["C:\\Users\\Krompa\\.cache\\firebase\\emulators\\ui-v1.11.5\\server\\server.js"],"optionalArgs":[],"joinArgs":false} {"metadata":{"emulator":{"name":"ui"},"message":"Starting Emulator UI with command {\"binary\":\"node\",\"args\":[\"C:\\\\Users\\\\Krompa\\\\.cache\\\\firebase\\\\emulators\\\\ui-v1.11.5\\\\server\\\\server.js\"],\"optionalArgs\":[],\"joinArgs\":false}"}}
[info] i  ui: Emulator UI logging to ui-debug.log {"metadata":{"emulator":{"name":"ui"},"message":"Emulator UI logging to \u001b[1mui-debug.log\u001b[22m"}}
[debug] [2023-04-06T20:01:00.483Z] Web / API server started at 127.0.0.1:4000
 {"metadata":{"emulator":{"name":"ui"},"message":"Web / API server started at 127.0.0.1:4000\n"}}
[debug] [2023-04-06T20:01:00.484Z] Web / API server started at ::1:4000
 {"metadata":{"emulator":{"name":"ui"},"message":"Web / API server started at ::1:4000\n"}}
[info] i  functions: Watching "C:\Users\Krompa\foodmine-backend\backend\functions" for Cloud Functions... {"metadata":{"emulator":{"name":"functions"},"message":"Watching \"C:\\Users\\Krompa\\foodmine-backend\\backend\\functions\" for Cloud Functions..."}}
[debug] [2023-04-06T20:01:00.629Z] Validating nodejs source
[debug] [2023-04-06T20:01:01.607Z] > [functions] package.json contents: {
  "name": "functions",
  "description": "Cloud Functions for Firebase",
  "scripts": {
    "lint": "eslint .",
    "serve": "firebase emulators:start --only functions",
    "shell": "firebase functions:shell",
    "start": "npm run shell",
    "deploy": "firebase deploy --only functions",
    "logs": "firebase functions:log"
  },
  "engines": {
    "node": "16"
  },
  "main": "index.js",
  "dependencies": {
    "firebase-admin": "^11.5.0",
    "firebase-functions": "^4.2.0"
  },
  "devDependencies": {
    "eslint": "^8.15.0",
    "eslint-config-google": "^0.14.0",
    "firebase-functions-test": "^3.0.0"
  },
  "private": true
}
[debug] [2023-04-06T20:01:01.608Z] Building nodejs source
[debug] [2023-04-06T20:01:01.608Z] Failed to find version of module node: reached end of search path C:\Users\Krompa\foodmine-backend\backend\functions\node_modules
[warn] !  functions: Your requested "node" version "16" doesn't match your global version "18". Using node@18 from host. 
[debug] [2023-04-06T20:01:01.610Z] Could not find functions.yaml. Must use http discovery
[debug] [2023-04-06T20:01:01.617Z] Found firebase-functions binary at 'C:\Users\Krompa\foodmine-backend\backend\functions\node_modules\.bin\firebase-functions'
[debug] [2023-04-06T20:01:01.895Z] Serving at port 8567

[debug] [2023-04-06T20:01:01.910Z] Got response from /__/functions.yaml Failed to generate manifest from function source: SyntaxError: Cannot use import statement outside a module
[debug] [2023-04-06T20:01:01.912Z] Failed to parse functions.yamlincomplete explicit mapping pair; a key node is missed; or followed by a non-tabulated empty line at line 1, column 62:
     ... rom function source: SyntaxError: Cannot use import statement ou ... 
                                         ^ {"name":"YAMLException","reason":"incomplete explicit mapping pair; a key node is missed; or followed by a non-tabulated empty line","mark":{"name":null,"buffer":"Failed to generate manifest from function source: SyntaxError: Cannot use import statement outside a module\n\u0000","position":61,"line":0,"column":61},"message":"incomplete explicit mapping pair; a key node is missed; or followed by a non-tabulated empty line at line 1, column 62:\n     ... rom function source: SyntaxError: Cannot use import statement ou ... \n                                         ^"}
[debug] [2023-04-06T20:01:01.916Z] shutdown requested via /__/quitquitquit

[error] !!  functions: Failed to load function definition from source: FirebaseError: Failed to load function definition from source: Failed to generate manifest from function source: SyntaxError: Cannot use import statement outside a module {"metadata":{"emulator":{"name":"functions"},"message":"Failed to load function definition from source: FirebaseError: Failed to load function definition from source: Failed to generate manifest from function source: SyntaxError: Cannot use import statement outside a module"}}
[info] 
┌─────────────────────────────────────────────────────────────┐
│ ✔  All emulators ready! It is now safe to connect your app. │
│ i  View Emulator UI at http://127.0.0.1:4000/               │
└─────────────────────────────────────────────────────────────┘

┌───────────┬────────────────┬─────────────────────────────────┐
│ Emulator  │ Host:Port      │ View in Emulator UI             │
├───────────┼────────────────┼─────────────────────────────────┤
│ Functions │ 127.0.0.1:5001 │ http://127.0.0.1:4000/functions │
└───────────┴────────────────┴─────────────────────────────────┘
  Emulator Hub running at 127.0.0.1:4400
  Other reserved ports: 4500

Issues? Report them at https://github.com/firebase/firebase-tools/issues and attach the *-debug.log files.
 
